# tinybird-python-sdk

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.py
examples/: datasource.py  litellm.datasource  litellm_async.py  litellm_sync.py
tb/: __init__.py  api.py  datasource.py  logger.py  utils.py
tb/a/: api.py  datasource.py
tb/litellm/: handler.py
