[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinybird-python-sdk"
version = "0.1.2"
description = "Python SDK for Tinybird"
authors = [
    {name = "tinybird.co", email = "support@tinybird.co"},
]
dependencies = [
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "pyproject-toml>=0.0.10",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.setuptools]
packages = ["tb"] 