[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinybird-python-sdk"
version = "0.2.2"
description = "Python SDK for Tinybird"
readme = "README.md"
authors = [
    {name = "tinybird.co", email = "support@tinybird.co"},
]
dependencies = [
    "requests>=2.32.3",
    "aiohttp>=3.11.2",
    "backoff>=2.2.0",
]

[project.optional-dependencies]
ai = [
    "litellm>=1.62.1"
]

[project.urls]
homepage = "https://github.com/tinybirdco/tinybird-python-sdk"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.setuptools]
packages = ["tb", "tb.a", "tb.litellm"] 